# tgApp

./: .bazelrc  .gitignore  .gitlab-ci.yml  .gitmodules  CLAUDE.md  MODULE.bazel  Random.txt  versions.json
.github/workflows/: build.yml
.xcodebuildmcp/: config.yaml
Telegram/: BUILD  prebuilt_watchos.bzl  prebuilt_watchos_build.sh
Telegram/BroadcastUpload/: BroadcastUploadExtension.swift
Telegram/Share/: ShareRootController.swift
Telegram/WatchApp/: .gitignore  BUILD  project.yml
build-system/: BUILD  gramsrv-configuration.json
build-system/Make/: BuildConfiguration.py  DecryptMatch.py  Make.py  RemoteBuild.py
docs/: instantpage-richtext.md
docs/superpowers/: postbox-refactor-log.md
submodules/AttachmentTextInputPanelNode/: BUILD
submodules/AttachmentUI/: BUILD
submodules/AuthorizationUI/: BUILD
submodules/AvatarVideoNode/: BUILD
submodules/BotPaymentsUI/: BUILD
submodules/BrowserUI/: BUILD
submodules/CalendarMessageScreen/: BUILD
submodules/ChatImportUI/: BUILD
submodules/ChatInterfaceState/: BUILD
submodules/ChatListUI/: BUILD
submodules/ChatSendMessageActionUI/: BUILD
submodules/ChatTextLinkEditUI/: BUILD
submodules/ContactListUI/: BUILD
submodules/DebugSettingsUI/: BUILD
submodules/DrawingUI/: BUILD
submodules/FileMediaResourceStatus/: BUILD
submodules/GalleryData/: BUILD
submodules/GalleryUI/: BUILD
submodules/HorizontalPeerItem/: BUILD
submodules/ICloudResources/: BUILD
submodules/ImageContentAnalysis/: BUILD
submodules/ImportStickerPackUI/: BUILD
submodules/InAppPurchaseManager/: BUILD
submodules/InstantPageCache/: BUILD
submodules/InstantPageUI/: BUILD
submodules/InviteLinksUI/: BUILD
submodules/ItemListAvatarAndNameInfoItem/: BUILD
submodules/ItemListPeerItem/: BUILD
submodules/ItemListStickerPackItem/: BUILD
submodules/ItemListUI/: BUILD
submodules/LegacyMediaPickerUI/: BUILD
submodules/LegacyUI/: BUILD
submodules/LocalMediaResources/: BUILD
submodules/LocationUI/: BUILD
submodules/MapResourceToAvatarSizes/: BUILD
submodules/MediaPasteboardUI/: BUILD
submodules/MediaPickerUI/: BUILD
submodules/MediaResources/: BUILD
submodules/NotificationMuteSettingsUI/: BUILD
submodules/NotificationSoundSelectionUI/: BUILD
submodules/OpenInExternalAppUI/: BUILD
submodules/PasscodeUI/: BUILD
submodules/PassportUI/: BUILD
submodules/PasswordSetupUI/: BUILD
submodules/PaymentMethodUI/: BUILD
submodules/PeerAvatarGalleryUI/: BUILD
submodules/PeerInfoAvatarListNode/: BUILD
submodules/PeerInfoUI/: BUILD
submodules/PhotoResources/: BUILD
submodules/PresentationDataUtils/: BUILD
submodules/PromptUI/: BUILD
submodules/QrCodeUI/: BUILD
submodules/SaveToCameraRoll/: BUILD
submodules/SearchPeerMembers/: BUILD
submodules/SelectablePeerNode/: BUILD
submodules/SettingsUI/: BUILD
submodules/SparseItemGrid/: BUILD
submodules/StickerPackPreviewUI/: BUILD
submodules/StickerPeekUI/: BUILD
submodules/Svg/: BUILD
submodules/TelegramBaseController/: BUILD
submodules/TelegramNotices/: BUILD
submodules/TelegramPermissionsUI/: BUILD
submodules/TelegramUI/: BUILD
submodules/TgVoipWebrtc/: BUILD  CLAUDE.md
submodules/TranslateUI/: BUILD
(+1777 files in other folders)
