http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

bazel_dep(name = "bazel_features", version = "1.33.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.2")

bazel_dep(name = "gazelle", version = "0.43.0", repo_name = "bazel_gazelle")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//submodules/TgVoipWebrtc/tgcalls/tools/go_sfu:go.mod")
use_repo(
    go_deps,
    "com_github_pion_datachannel",
    "com_github_pion_dtls_v3",
    "com_github_pion_ice_v4",
    "com_github_pion_logging",
    "com_github_pion_rtcp",
    "com_github_pion_sctp",
    "com_github_pion_srtp_v3",
)

bazel_dep(name = "rules_xcodeproj")
local_path_override(
    module_name = "rules_xcodeproj",
    path = "./build-system/bazel-rules/rules_xcodeproj",
)

bazel_dep(name = "rules_apple", repo_name = "build_bazel_rules_apple")
local_path_override(
    module_name = "rules_apple",
    path = "./build-system/bazel-rules/rules_apple",
)

bazel_dep(name = "rules_swift", repo_name = "build_bazel_rules_swift")
local_path_override(
    module_name = "rules_swift",
    path = "./build-system/bazel-rules/rules_swift",
)

bazel_dep(name = "apple_support", repo_name = "build_bazel_apple_support")
local_path_override(
    module_name = "apple_support",
    path = "./build-system/bazel-rules/apple_support",
)

http_file(
    name = "cmake_tar_gz",
    sha256 = "3be85f5b999e327b1ac7d804cbc9acd767059e9f603c42ec2765f6ab68fbd367",
    urls = ["https://github.com/Kitware/CMake/releases/download/v4.1.2/cmake-4.1.2-macos-universal.tar.gz"],
)

http_file(
    name = "meson_tar_gz",
    sha256 = "999b65f21c03541cf11365489c1fad22e2418bb0c3d50ca61139f2eec09d5496",
    urls = ["https://github.com/mesonbuild/meson/releases/download/1.6.0/meson-1.6.0.tar.gz"],
)

http_file(
    name = "ninja-mac_zip",
    sha256 = "89a287444b5b3e98f88a945afa50ce937b8ffd1dcc59c555ad9b1baf855298c9",
    urls = ["https://github.com/ninja-build/ninja/releases/download/v1.12.1/ninja-mac.zip"],
)

http_file(
    name = "flatbuffers_zip",
    sha256 = "c5cd6a605ff20350c7faa19d8eeb599df6117ea4aabd16ac58a7eb5ba82df4e7",
    urls = ["https://github.com/google/flatbuffers/archive/refs/tags/v24.12.23.zip"],
)

provisioning_profile_repository = use_extension("@build_bazel_rules_apple//apple:apple.bzl", "provisioning_profile_repository_extension")
#provisioning_profile_repository.setup(
#    fallback_profiles = "//path/to/some:filegroup", # Profiles to use if one isn't found locally
#)

bazel_dep(name = "build_configuration")
local_path_override(
    module_name = "build_configuration",
    path = "./build-input/configuration-repository",
)

bazel_dep(name = "sourcekit_bazel_bsp", version = "0.7.1")
local_path_override(
    module_name = "sourcekit_bazel_bsp",
    path = "build-system/bazel-rules/sourcekit-bazel-bsp",
)
